2.02/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4567
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 2345
